# minecraft2

./: .gitignore  CMakeLists.txt
src/: block.h  hitbox.cpp  hitbox.h  main.cpp  map.cpp  map.h  player.cpp  player.h  zombie.cpp  zombie.h
tests/: death_test.cpp  spawn_test.cpp  update_test.cpp  zombie_test.cpp
